fix(filters): increase group spacing
(cherry picked from commit 1d234d5)

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -2060,8 +2060,8 @@ table.stats.stats-book table.printbook-bestiary-entry {
 }
 
 .dropdown-menu-filter .pill-grid-subs-divider {
-	margin-top: 3px;
-	margin-bottom: 3px;
+	margin-top: 6px;
+	margin-bottom: 6px;
 	max-width: 80%;
 }
 
